# agent-bus-mcp

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  pyproject.toml  spec-v3_1.md  spec-v5.md  spec.md
.agents/skills/agent-bus-workflows/: SKILL.md
.agents/skills/agent-bus-workflows/agents/: openai.yaml
.agents/skills/agent-bus-workflows/references/: examples.md  review-loop.md
.github/scripts/: apply_version_overrides.py
.github/workflows/: build-wheels.yml  ci.yml  publish-docs-site.yml  publish-testpypi.yml  render-pypi-readme.yml
agent_bus/: __init__.py  cli.py  common.py  db.py  embedding_worker.py  entrypoint.py  models.py  peer_server.py  render.py  search.py  student_server.py  teacher_server.py  tool_schemas.py  version.py
agent_bus/web/: __init__.py  server.py
agent_bus/web/templates/: base.html
agent_bus/web/templates/components/: message.html  messages.html  presence.html  search_results.html
agent_bus/web/templates/topics/: detail.html  list.html
docs/: README.md  diataxis-migration-matrix.md
docs/explanation/: README.md  why-agent-bus.md
docs/how-to/: README.md  install-and-configure-agent-bus.md  use-the-web-ui.md
docs/reference/: README.md  configuration-reference.md  runtime-reference.md  search-and-embeddings-reference.md
docs/tutorials/: README.md  first-topic-between-two-peers.md
frontend/: index.html  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css  main.tsx
frontend/src/components/ui/: collapsible.tsx  dialog.tsx  skeleton.tsx
frontend/src/lib/: api.ts  format.ts  types.ts  workbench-state.ts
frontend/src/test/: setup.ts
frontend/tests/: workbench.spec.ts
scripts/: generate_fumadocs_site.py
site/: .gitignore  README.md  base-path.shared.js  next.config.mjs  package.json  pnpm-lock.yaml
site/scripts/: generate-content.mjs  serve-export.mjs  types-check.mjs
site/src/app/: global.css  layout.tsx
site/src/app/(home)/: page.tsx
site/src/app/docs/: page.tsx
site/src/app/docs/[...slug]/: page.tsx
site/src/app/llms-full.txt/: route.ts
site/src/app/llms.mdx/docs/[[...slug]]/: route.ts
site/src/app/og/docs/[...slug]/: route.tsx
site/src/components/: clients-strip.tsx  closing-cta.tsx  docs-front-door.tsx  docs-page-boards.tsx  docs.tsx  fit-and-not-fit.tsx  how-it-works.tsx  install-section.tsx  install-snippet.tsx  mdx.tsx  parallax-hero.tsx  provider.tsx  search.tsx  section-kicker.tsx  topic-flow-diagram.tsx  where-to-next.tsx
site/src/lib/: docs-page.tsx  layout.shared.tsx  shared.ts  source.ts
src/: lib.rs
tests/: test_cli.py  test_cli_export.py  test_cli_search.py  test_cli_tail_flag.py  test_db.py  test_db_latest.py  test_embedding_worker.py  test_generate_fumadocs_site.py  test_pagination.py  test_render.py  test_search.py  test_tools_smoke.py  test_validation.py  test_web.py
tests/fixtures/: seed_web_ui_db.py
