[package]
name = "agent-bus-core"
version = "0.3.0"
edition = "2021"

[lib]
name = "agent_bus_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27", features = ["abi3-py312", "extension-module"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
once_cell = "1.19.0"
fastembed = { version = "5.9.0", default-features = false, features = ["ort-download-binaries-rustls-tls", "hf-hub-rustls-tls"] }
