[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "agent-bus"
version = "0.1.0"
description = "Local SQLite-backed MCP bus for peer coding agents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "click>=8.1.0",
  "mcp>=1.25.0",
]

[project.optional-dependencies]
web = [
  "fastapi>=0.115.0",
  "uvicorn>=0.32.0",
  "jinja2>=3.1.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
  "agent-bus[web]",
]

[project.scripts]
agent-bus = "agent_bus.entrypoint:main"

[tool.hatch.build.targets.wheel]
packages = ["agent_bus"]

[tool.hatch.build.targets.wheel.force-include]
"agent_bus/web/templates" = "agent_bus/web/templates"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = [
  "E501", # handled by formatter
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
