[build-system]
requires = ["maturin>=1.11.5,<2.0"]
build-backend = "maturin"

[project]
name = "agent-bus-mcp"
version = "0.1.4"
description = "Local SQLite-backed MCP bus for peer coding agents"
readme = "README.md"
requires-python = ">=3.12"
license-files = ["LICENSE"]
authors = [{ name = "Alessandro Bologna", email = "alessandro.bologna@gmail.com" }]
keywords = ["mcp", "agent", "sqlite", "cli", "tauri", "bus"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
]
dependencies = [
  "click>=8.3.1",
  "mcp>=1.25.0",
  "numpy>=2.4.1",
]

[project.urls]
Homepage = "https://github.com/alessandrobologna/agent-bus-mcp"
Repository = "https://github.com/alessandrobologna/agent-bus-mcp"
Issues = "https://github.com/alessandrobologna/agent-bus-mcp/issues"

[project.optional-dependencies]
web = [
  "fastapi>=0.128.0",
  "uvicorn>=0.40.0",
  "jinja2>=3.1.6",
]

[dependency-groups]
dev = [
  "pytest>=9.0.2",
  "ruff>=0.14.13",
  "ty>=0.0.13",
  "maturin>=1.11.5,<2.0",
  "agent-bus-mcp[web]",
]

[project.scripts]
agent-bus = "agent_bus.entrypoint:main"

[tool.maturin]
bindings = "pyo3"
module-name = "agent_bus._core"
python-source = "."
features = ["pyo3/abi3-py312", "pyo3/extension-module"]
include = ["agent_bus/web/templates/**"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ty.src]
include = ["agent_bus"]
exclude = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = [
  "E501", # handled by formatter
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
